--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -25,7 +25,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        pip install requests beautifulsoup4 pytz
+        pip install -r requirements.txt
         
     - name: Run crawler and update HTML
       run: |
